--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -26,7 +26,7 @@
 .projectItem {
   border-radius: 15px;
   width: 400px;
-  height: 350px;
+  height: auto;
   margin: 40px;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   text-align: center;
@@ -71,4 +71,12 @@
     width: 300px;
     height: 300px;
   }
+}
+
+@media screen and (max-width: 480px){
+  .projectItem{
+    width: 250px;
+    height: 250px;
+  }
+  
 }
