--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -51,32 +51,35 @@
   font-size: 25px;
 }
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (min-width: 300px) {
   .projectList {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media only screen and (max-width: 800px) {
-  .projectList {
+    justify-content: center;
     grid-template-columns: 1fr;
   }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (min-width: 800px) {
   .projectList {
     width: 100%;
+    grid-template-columns: 1fr 1fr;
   }
   .projectItem {
     width: 300px;
-    height: 300px;
+    height: auto;
   }
 }
+
 
 @media screen and (max-width: 480px){
   .projectItem{
     width: 250px;
-    height: 250px;
+    height: auto;
   }
   
+}
+@media only screen and (min-width: 1300px) {
+    .projectList {
+        justify-content: center;
+        grid-template-columns: 1fr 1fr;
+    }
 }
