--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -80,7 +80,7 @@
 @media only screen and (min-width: 1300px) {
     .projectList {
         justify-content: center;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr ;
         padding: 0 10vw;
     }
 }
